bk_ida/gccida/g2/memory_address
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/memory_address/src/explow.c:931:22: error: must use 'enum' tag to refer to type 'machine_mode'
rtx  memory_address( machine_mode mode, rtx x) 
                     ^
                     enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/memory_address/src/explow.c:943:4: error: expected ';' after expression
rtx constant_term; // [rsp+8h] [rbp-30h] BYREF 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/memory_address/src/explow.c:943:5: error: use of undeclared identifier 'constant_term'
rtx constant_term; // [rsp+8h] [rbp-30h] BYREF 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/memory_address/src/explow.c:959:21: error: use of undeclared identifier 'machine_mode'
v3 = force_reg_0( ( machine_mode)( ( ( BYTE3( target_flags) & 2) != 0) + 4), x); 
                    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/memory_address/src/explow.c:1007:1: error: use of undeclared identifier 'constant_term'
constant_term = const_int_rtx[64]; 
^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/memory_address/src/explow.c:1008:38: error: use of undeclared identifier 'constant_term'
v9 = eliminate_constant_term_0( v3, &constant_term); 
                                     ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/memory_address/src/explow.c:1009:27: error: use of undeclared identifier 'constant_term'
if ( const_int_rtx[64] != constant_term ) 
                          ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/memory_address/src/explow.c:1013:7: error: use of undeclared identifier 'constant_term'
v10 = constant_term; 
      ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/memory_address/src/explow.c:1015:31: error: use of undeclared identifier 'machine_mode'
v12 = gen_rtx_fmt_ee( PLUS, ( machine_mode)*( ( unsigned __int8 *)v3 + 2), v11, v10); 
                              ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/memory_address/src/explow.c:1052:29: error: use of undeclared identifier 'machine_mode'
if ( general_operand( v3, ( machine_mode)( ( ( BYTE3( target_flags) & 2) != 0) + 4)) ) 
                            ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/memory_address/src/explow.c:1057:21: error: use of undeclared identifier 'machine_mode'
v3 = force_reg_0( ( machine_mode)( ( ( BYTE3( target_flags) & 2) != 0) + 4), v3); 
                    ^
11 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/memory_address/src/obj/explow.o] Error 1
